[build-system]
requires = ["setuptools>=44", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "asttokens/version.py"
write_to_template = "__version__ = \"{version}\"\n"

[tool.mypy]
show_error_codes=true
warn_unused_ignores=true
disallow_untyped_defs=true
disallow_untyped_calls=true
no_implicit_reexport=true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs=false
disallow_untyped_calls=false
ignore_missing_imports=true

[[tool.mypy.overrides]]
module = ["astroid", "astroid.node_classes", "astroid.nodes", "astroid.nodes.utils"]
ignore_missing_imports = true
