[metadata]
license_file = LICENSE
name = asttokens
version = 2.0.5
author = Dmitry Sagalovskiy, Grist Labs
author_email = dmitry@getgrist.com
license = Apache 2.0
description = Annotate AST trees with source code positions
keywords = code, ast, parse, tokenize, refactor
url = https://github.com/gristlabs/asttokens
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Interpreters
    Topic :: Software Development :: Pre-processors
    Environment :: Console
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = asttokens
install_requires = six
setup_requires = setuptools>=44; setuptools_scm[toml]>=3.4.3

[options.extras_require]
test = 
    astroid<=2.5.3
    pytest
    typing; python_version < "3.5"

[options.package_data]
asttokens = py.typed

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1


[tool:pytest]
addopts = --disable-warnings --ignore=tests/testdata
