[metadata]
license_file = LICENSE
name = asttokens
author = Dmitry Sagalovskiy, Grist Labs
author_email = dmitry@getgrist.com
license = Apache 2.0
description = Annotate AST trees with source code positions
keywords = code, ast, parse, tokenize, refactor
url = https://github.com/gristlabs/asttokens
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Interpreters
    Topic :: Software Development :: Pre-processors
    Environment :: Console
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = asttokens
setup_requires = setuptools>=44; setuptools_scm[toml]>=3.4.3
python_requires = >=3.8

[options.extras_require]
astroid =
    astroid >=2, <4
test =
    astroid >=2, <4
    pytest
    pytest-cov
    pytest-xdist

[options.package_data]
asttokens = py.typed

[tool:pytest]
addopts = --disable-warnings --ignore=tests/testdata --strict-markers -m 'not slow'
markers =
  slow: marks tests as slow (deselected by default)
